1.0.8
  
1.0.7
  Fixed wrong number of online players on home page.
  Added Space Invaders page, because why not?
  Updated Definitions for PHPConfig.ini
  Moved Resources files to individual directories (Youll need to manually delete the exsisting files)
  fixed bottom padding of #Main
  Changed Font styles
  Added % to cpu/serverload Graphs

1.0.6
  Added Support for configuration updates

1.0.5
  Added sendmail.lua to handle mail form.

1.0.4
  adjusted session requirments for console  and config page.

1.0.3
  Fixed Bug in manager install command

1.0.2
  Added Custom message support for Banners
  Added more dialog to installation and update

1.0.1
  Updated README
  added Database.php to the update exclusion
  Added Notes to Config page
  Updated default custom messages in PHPConfig.ini
  Updated Database.php defaults

1.0.0
  Initial Release