@@ -22,6 +22,10 @@
 <br/>
 <br/>
 <h3>CHANGE LOG:</h3>
+<h4>1.0.8</h4>
+  Added Last Seen support for players, GetPlayerData will track the last time it saw the player in the console</br>
+  Changed SendMail script so that the console sendmail form can now send long messages (previously not possible due to max characters in commands)</br>
+  </br>
 <h4>1.0.7</h4>
   Fixed wrong number of online players on home page.</br>
   Added Space Invaders page, because why not?</br>
