@@ -1,4 +1,6 @@
 1.0.8
+  Added Last Seen support for players, GetPlayerData will track the last time it saw the player in the console
+  Changed SendMail script so that the console sendmail form can now send long messages (previously not possible due to max characters in commands)
   
 1.0.7
   Fixed wrong number of online players on home page.
